[gd_scene load_steps=13 format=2]

[ext_resource path="res://CollisionLayers/LayerAndMask.gd" type="Script" id=1]
[ext_resource path="res://godot.png" type="Texture" id=2]
[ext_resource path="res://Assets/font_small.tres" type="DynamicFont" id=3]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 47.5349, 46.9417 )

[sub_resource type="Animation" id=4]

resource_name = "flash"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.992157, 0.882353, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0.992157, 0.882353, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]

resource_name = "normal"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 31.5371, 31.3102 )

[sub_resource type="Animation" id=5]

resource_name = "flash"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.25098, 1, 1 ), Color( 0.47451, 0.929412, 0.247059, 1 ), Color( 0, 0.25098, 1, 1 ), Color( 0.47451, 0.929412, 0.247059, 1 ), Color( 0, 0.25098, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=3]

radius = 23.8251

[sub_resource type="Animation" id=7]

resource_name = "flash"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.898039, 0.286275, 1 ), Color( 0.764706, 0.435294, 0.8, 1 ), Color( 0, 0.898039, 0.286275, 1 ), Color( 0.764706, 0.435294, 0.8, 1 ), Color( 0, 0.898039, 0.286275, 1 ) ]
}

[sub_resource type="Animation" id=6]

resource_name = "flash"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.835294, 1, 1 ), Color( 0.996078, 0.231373, 0.231373, 1 ), Color( 0, 0.835294, 1, 1 ), Color( 0.996078, 0.231373, 0.231373, 1 ), Color( 0, 0.835294, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]

resource_name = "flash"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.827451, 0.898039, 0, 1 ), Color( 0.215686, 0.137255, 0.52549, 1 ), Color( 0.827451, 0.898039, 0, 1 ), Color( 0.215686, 0.137255, 0.52549, 1 ), Color( 0.827451, 0.898039, 0, 1 ) ]
}

[node name="LayerAndMask" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 259.575, 248.94 )
collision_mask = 6

[node name="Sprite" type="Sprite" parent="Player"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Player"]
margin_left = -49.1611
margin_top = 54.038
margin_right = 48.8389
margin_bottom = 88.038
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.137255, 1, 0.192157, 1 )
text = "Player"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
autoplay = "normal"
anims/flash = SubResource( 4 )
anims/normal = SubResource( 9 )

[node name="Enemy1" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 400.935, 169.654 )
collision_layer = 2

[node name="Sprite" type="Sprite" parent="Enemy1"]
self_modulate = Color( 0, 0.25098, 1, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy1"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy1"]
anims/flash = SubResource( 5 )

[node name="Coin1" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 787.484, 173.899 )
collision_layer = 4
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Coin1"]
self_modulate = Color( 0, 0.898039, 0.286275, 1 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coin1"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Coin1"]
anims/flash = SubResource( 7 )

[node name="Enemy2" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 400.935, 371.284 )
monitoring = false
collision_layer = 2
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Enemy2"]
self_modulate = Color( 0, 0.835294, 1, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy2"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy2"]
anims/flash = SubResource( 6 )

[node name="Coin2" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 787.484, 373.768 )
monitorable = false
collision_layer = 4
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Coin2"]
self_modulate = Color( 0.827451, 0.898039, 0, 1 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coin2"]
visible = false
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Coin2"]
anims/flash = SubResource( 8 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label1" type="Label" parent="Control"]
margin_left = 283.203
margin_top = 485.841
margin_right = 515.203
margin_bottom = 519.841
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.952941, 0.403922, 0.403922, 1 )
text = "Monitoring = false"

[node name="Label2" type="Label" parent="Control"]
margin_left = 656.815
margin_top = 488.236
margin_right = 903.815
margin_bottom = 522.236
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.952941, 0.827451, 0.403922, 1 )
text = "Monitorable = false"

[node name="LabelEnemy1" type="Label" parent="Control"]
margin_left = 282.137
margin_top = 92.048
margin_right = 529.137
margin_bottom = 126.048
custom_fonts/font = ExtResource( 3 )
text = "Enemy1"
align = 1

[node name="LabelEnemy2" type="Label" parent="Control"]
margin_left = 281.257
margin_top = 299.232
margin_right = 528.257
margin_bottom = 333.232
custom_fonts/font = ExtResource( 3 )
text = "Enemy2"
align = 1

[node name="LabelCoin1" type="Label" parent="Control"]
margin_left = 664.602
margin_top = 92.048
margin_right = 911.602
margin_bottom = 126.048
custom_fonts/font = ExtResource( 3 )
text = "Coin1"
align = 1

[node name="LabelCoin2" type="Label" parent="Control"]
margin_left = 664.297
margin_top = 298.792
margin_right = 911.297
margin_bottom = 332.792
custom_fonts/font = ExtResource( 3 )
text = "Coin2"
align = 1

[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
[connection signal="area_exited" from="Player" to="." method="_on_Player_area_exited"]
[connection signal="area_entered" from="Enemy1" to="." method="_on_Enemy1_area_entered"]
[connection signal="area_exited" from="Enemy1" to="." method="_on_Enemy1_area_exited"]
[connection signal="area_entered" from="Coin1" to="." method="_on_Coin1_area_entered"]
[connection signal="area_exited" from="Coin1" to="." method="_on_Coin1_area_exited"]
[connection signal="area_entered" from="Enemy2" to="." method="_on_Enemy2_area_entered"]
[connection signal="area_exited" from="Enemy2" to="." method="_on_Enemy2_area_exited"]
[connection signal="area_entered" from="Coin2" to="." method="_on_Coin2_area_entered"]
[connection signal="area_exited" from="Coin2" to="." method="_on_Coin2_area_exited"]
